past matches design changed

--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
@@ -13,7 +13,7 @@
                     <div class="column-widget h-white">
                         <div class="row">
                             <div class="col-md-4">
-                                <img class="footer-logo" src="~/images/logo.png" alt="">
+                                <img class="footer-logo" src="~/Assets/images/logo.png" alt="">
                             </div>
                             <div class="col-md-4">
                                 <ul class="address-list style-2">
