--- a/BisLeagues.Presentation/Views/News/Detail.cshtml
+++ b/BisLeagues.Presentation/Views/News/Detail.cshtml
@@ -36,7 +36,34 @@
         </div>
     </div>
     <!-- Page Heading & Breadcrumbs  -->
-    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/banner.jpeg", width = 1280, height = 250 }))" >
+
+    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window"  style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/banner.jpeg", width = 1280, height = 250 }))">
+        @if (Model.New.Match != null)
+        {
+            <div class="container">
+                <div class="last-match-banner">
+                    <div class="home-team">
+                        <span>
+                            <img class="team-logo"  src="@Url.Action("Resize", "Image", new { url = Model.New.Match.Home.Logo.Path, width = 120, height = 120 })"  alt="">
+                        </span>
+                        <span class="@homeTag"></span>
+                    </div>
+                    <div class="score">
+                        <div class="rectangle">
+                            <strong class="vs-match-result">@Model.Result.HomeScore<span>Vs</span>@Model.Result.AwayScore</strong>
+                            <span class="end-time"><i class="fa fa-clock-o"></i>@Model.New.Match.MatchDate.ToLocalTime().ToString("dd MMMM yyyy", System.Globalization.CultureInfo.InvariantCulture)</span>
+                            <span class="end-time"><i class="fa fa-map-marker"></i>@Model.New.Match.StadiumName</span>
+                        </div>
+                    </div>
+                    <div class="away-team">
+                        <span class="@awayTag"></span>
+                        <span>
+                            <img class="team-logo"  src="@Url.Action("Resize", "Image", new { url = Model.New.Match.Away.Logo.Path, width = 120, height = 120 })"  alt="">
+                        </span>
+                    </div>
+                </div>
+            </div>
+        }
     </div>
 }
 
