--- a/BisLeagues.Presentation/Views/GoalKing/Index.cshtml
+++ b/BisLeagues.Presentation/Views/GoalKing/Index.cshtml
@@ -57,7 +57,7 @@
                     <div class="away-team">
                         <span class="@awayTag"></span>
                         <span>
-                            <img class="team-logo"  src="@Url.Action("Resize", "Image", new { url = Model.LastMatchsResult.Match.Home.Logo.Path, width = 120, height = 120 })"  alt="">
+                            <img class="team-logo"  src="@Url.Action("Resize", "Image", new { url = Model.LastMatchsResult.Match.Away.Logo.Path, width = 120, height = 120 })"  alt="">
                         </span>
                     </div>
                 </div>
