--- a/BisLeagues.Presentation/wwwroot/Assets/css/style.css
+++ b/BisLeagues.Presentation/wwwroot/Assets/css/style.css
@@ -111,7 +111,7 @@ box-sizing: border-box;
 h2{ font-size: 26px; text-transform: uppercase; font-weight: bold;}
 h3{ font-size: 20px; margin: 0 0 30px; font-weight: bold; overflow: hidden;}
 h3 span{ padding: 0 10px 0 0; position: relative;}
-h3 span::before{ content: ""; position: absolute; left: 100%; background: url(../images/heading-pettren.png) repeat-x center center;
+h3 span::before{ content: ""; position: absolute; left: 100%;
 height: 100%; width: 999px; top: 0;}
 h4{ font-size: 16px; font-weight: bold; margin: 0; text-transform: uppercase; text-align: center; padding: 15px 0;
 background: #202020; color: #fff;}
@@ -578,7 +578,7 @@ z-index: 1; color: #f2f2f2;}
 border-radius: 100%; font-family: fontawesome; text-align: center; line-height: 20px; color: #999; margin: -20px 0 0 10px; cursor: pointer;}
 
 /* Last Matches */
-.bg-fixed{ background: url(../images/pattern-bg.jpg);}
+.bg-fixed{ }
 .last-matches{ border-bottom: 1px solid; margin: 0 0 30px;}
 .last-matches .matches-detail p{ text-align: center; color: #fff;}
 .last-matches.styel-1{ margin: 0;}
