--- a/BisLeagues.Presentation/Views/Home/Index.cshtml
+++ b/BisLeagues.Presentation/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
 
 }
 
+
 <div id="myCarouselFixture" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
@@ -33,7 +34,7 @@
                 <div class="next-match style-2">
                     <div class="container p-0">
                         <!-- Macth left Time -->
-                        <div class="col-sm-6 bg-2">
+                        <div class="col-sm-6 bg-2 left-side">
                             <div class="left-match-time">
                                 <h2>Gelecek Maç</h2>
                                 <ul id="countdown-1" class="countdown">
@@ -46,22 +47,22 @@
                         </div>
                         <!-- Macth left Time -->
                         <!-- Vs Team -->
-                        <div class="col-sm-6 bg-1">
+                        <div class="col-sm-6 bg-1 right-side">
                             <div class="vs-team">
                                 <div class="team-btw-match">
                                     @if (item.Match != null)
                                     {
                                         <ul>
                                             <li>
-                                                <img src="@Url.Action("Resize", "Image", new {url = item.Match.Home?.Logo?.Path, width = 105, height = 105})" alt="@item.Match.Home.Name">
+                                                <img src="@Url.Action("Resize", "Image", new {url = item.Match.Home?.Logo?.Path, width = 100, height = 100})" alt="@item.Match.Home.Name">
                                                 <span>
-                                                    <a style="color:white;" href="@Url.Action("Detail", "Team", new {item.Match.Home.Id})">@item.Match.Home.Name</a>
+                                                    <a style="color:black;" href="@Url.Action("Detail", "Team", new {item.Match.Home.Id})">@item.Match.Home.Name</a>
                                                 </span>
                                             </li>
                                             <li>
-                                                <img src="@Url.Action("Resize", "Image", new {url = item.Match.Away?.Logo?.Path, width = 105, height = 105})" alt="@item.Match.Away.Name">
+                                                <img src="@Url.Action("Resize", "Image", new {url = item.Match.Away?.Logo?.Path, width = 100, height = 100})" alt="@item.Match.Away.Name">
                                                 <span>
-                                                    <a style="color:white;" href="@Url.Action("Detail", "Team", new {item.Match.Away.Id})">@item.Match.Away.Name</a>
+                                                    <a style="color:black;" href="@Url.Action("Detail", "Team", new {item.Match.Away.Id})">@item.Match.Away.Name</a>
                                                 </span>
                                             </li>
                                         </ul>
@@ -70,7 +71,6 @@
                             </div>
                         </div>
                         <!-- Vs Team -->
-
                     </div>
                 </div>
                 <!-- Next Match -->
