--- a/BisLeagues.Presentation/Areas/Admin/Views/Match/Edit.cshtml
+++ b/BisLeagues.Presentation/Areas/Admin/Views/Match/Edit.cshtml
@@ -245,7 +245,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group bmd-form-group">
                                         <label class="bmd-label-floating"> Haber içeriği</label>
-                                        <textarea class="form-control" name="content" id="content" rows="15">@Model.Match.New?.Caption</textarea>
+                                        <textarea class="form-control" name="content" id="content" rows="15">@Model.Match.New?.Content</textarea>
                                     </div>
                                 </div>
                             </div>
