--- a/BisLeagues.Presentation/Views/Match/PastMatches.cshtml
+++ b/BisLeagues.Presentation/Views/Match/PastMatches.cshtml
@@ -35,7 +35,7 @@
         </div>
         <!-- Page Heading & Breadcrumbs  -->
         <!-- Page Heading banner -->
-        <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url('../images/banner.jpeg')">
+        <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/banner.jpeg", width = 1280, height = 250 }))">
             <div class="container">
                 <div class="last-match-banner">
                     <div class="home-team">
