--- a/BisLeagues.Presentation/Views/Match/UpComingMatches.cshtml
+++ b/BisLeagues.Presentation/Views/Match/UpComingMatches.cshtml
@@ -6,48 +6,58 @@
 }
 @if (Model.NoMatchFound != true)
 {
-    @section Heading{
+@section Heading{
 
-        <!-- Page Heading & Breadcrumbs  -->
-        <div class="page-heading-breadcrumbs hidden-xs">
-            <div class="container">
-                <h2>Gelecek Maçlar</h2>
-                <ul class="breadcrumbs">
-                    <li><a href="@Url.Action("Index","Home")">Anasayfa</a></li>
-                    <li>Gelecek Maçlar</li>
-                </ul>
-            </div>
+    <!-- Page Heading & Breadcrumbs  -->
+    <div class="page-heading-breadcrumbs hidden-xs">
+        <div class="container">
+            <h2>Gelecek Maçlar</h2>
+            <ul class="breadcrumbs">
+                <li>
+                    <a href="@Url.Action("Index", "Home")">Anasayfa</a>
+                </li>
+                <li>Gelecek Maçlar</li>
+            </ul>
         </div>
-        <!-- Page Heading & Breadcrumbs  -->
-        <!-- Page Heading banner -->
-        <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">
-            <div class="container">
-                <div class="pager-heading match-detail white-heading">
-                    <span class="pull-left"><img src="@Url.Action("Resize", "Image", new { url = Model.UpComingMatch.Home.Logo.Path, width = 105, height = 105 })" alt="@Model.UpComingMatch.Home.Name"></span>
-                    <div class="match-vs-heading position-center-center">
-                        <div class="left-tiem-acounter">
-                            <ul id="countdown-3" class="countdown">
-                                <li><span class="days">@Model.UpComingMatchCounter.Days</span>Gün</li>
-                                <li><span class="hours">@Model.UpComingMatchCounter.Hours</span>Saat</li>
-                                <li><span class="minutes">@Model.UpComingMatchCounter.Minutes</span>Dakika</li>
-                            </ul>
-                        </div>
-                        <span class="result-vs">vs</span>
-                        <div class="location-marker">
-                            <ul>
-                                <li><i class="fa fa-map-marker"></i>@Model.UpComingMatch.StadiumName</li>
-                                <li><i class="fa fa-clock-o"></i> @TimeZoneInfo.ConvertTimeFromUtc(Model.UpComingMatch.MatchDate, TimeZoneInfo.Local).ToString("dddd, dd MMMM yyyy")</li>
-                            </ul>
-                        </div>
+    </div>
+    <!-- Page Heading & Breadcrumbs  -->
+    <!-- Page Heading banner -->
+    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new {url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900}))">
+        <div class="container">
+            <div class="pager-heading match-detail white-heading">
+                <span class="pull-left">
+                    <img src="@Url.Action("Resize", "Image", new {url = Model.UpComingMatch.Home.Logo.Path, width = 105, height = 105})" alt="@Model.UpComingMatch.Home.Name">
+                </span>
+                <div class="match-vs-heading position-center-center">
+                    <div class="left-tiem-acounter">
+                        <ul id="countdown-3" class="countdown">
+                            <li><span class="days">@Model.UpComingMatchCounter.Days</span>Gün</li>
+                            <li><span class="hours">@Model.UpComingMatchCounter.Hours</span>Saat</li>
+                            <li><span class="minutes">@Model.UpComingMatchCounter.Minutes</span>Dakika</li>
+                        </ul>
                     </div>
-                    <span class="pull-right"><img src="@Url.Action("Resize", "Image", new { url = Model.UpComingMatch.Away.Logo.Path, width = 105, height = 105 })" alt="@Model.UpComingMatch.Away.Name"></span>
+                    <span class="result-vs">vs</span>
+                    <div class="location-marker">
+                        <ul>
+                            <li>
+                                <i class="fa fa-map-marker"></i>@Model.UpComingMatch.StadiumName
+                            </li>
+                            <li>
+                                <i class="fa fa-clock-o"></i> @TimeZoneInfo.ConvertTimeFromUtc(Model.UpComingMatch.MatchDate, TimeZoneInfo.Local).ToString("dddd, dd MMMM yyyy")
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+                <span class="pull-right">
+                    <img src="@Url.Action("Resize", "Image", new {url = Model.UpComingMatch.Away.Logo.Path, width = 105, height = 105})" alt="@Model.UpComingMatch.Away.Name">
+                </span>
             </div>
         </div>
-        <!-- Page Heading banner -->
-        <br />
+    </div>
+    <!-- Page Heading banner -->
+    <br/>
 
-    }
+}
     <!-- Match -->
     <div class="theme-padding white-bg">
         <div class="container">
@@ -62,19 +72,37 @@
                                 @foreach (var match in Model.Matches)
                                 {
                                     <li>
-                                        <a href="@Url.Action("Detail", "Team", new { match.Home.Id })"><span class="pull-left"><img src="@Url.Action("Resize", "Image", new { url = match.Home.Logo.Path, width = 105, height = 105 })" alt="@match.Home.Name"></span></a>
-                                        <a href="@Url.Action("Detail", "Team", new { match.Away.Id })"><span class="pull-right"><img src="@Url.Action("Resize", "Image", new { url = match.Away.Logo.Path, width = 105, height = 105 })" alt="@match.Away.Name"></span></a>
+                                        <span>
+                                            <a href="@Url.Action("Detail", "Team", new {match.Home.Id})">
+                                                <span class="pull-left">
+                                                    <img src="@Url.Action("Resize", "Image", new {url = match.Home.Logo.Path, width = 105, height = 105})" alt="@match.Home.Name">
+                                                </span>
+                                            </a>
+                                        </span>
+                                        <span>
+                                            <a href="@Url.Action("Detail", "Team", new {match.Away.Id})">
+                                                <span class="pull-right">
+                                                    <img src="@Url.Action("Resize", "Image", new {url = match.Away.Logo.Path, width = 105, height = 105})" alt="@match.Away.Name">
+                                                </span>
+                                            </a>
+                                        </span>
                                         <div class="detail">
-                                            <a href="#"><i></i></a>
-                                            <strong>@match.Home.Name<i class="red-color"> | @TimeZoneInfo.ConvertTimeFromUtc(match.MatchDate, TimeZoneInfo.Local).ToString("dddd, dd MMMM yyyy") | </i> @match.Away.Name</strong>
-                                            <span class="location-marker"><i class="fa fa-map-marker"></i>@match.StadiumName</span>
+                                            <a href="#">
+                                                <i></i>
+                                            </a>
+                                            <strong>
+                                                @match.Home.Name<i class="red-color"> | @TimeZoneInfo.ConvertTimeFromUtc(match.MatchDate, TimeZoneInfo.Local).ToString("dddd, dd MMMM yyyy") | </i> @match.Away.Name
+                                            </strong>
+                                            <span class="location-marker">
+                                                <i class="fa fa-map-marker"></i>@match.StadiumName
+                                            </span>
                                         </div>
                                     </li>
                                 }
                             </ul>
                         </div>
                         <!-- Matches Dates Shedule -->
-                        
+
 
                     </div>
                 </div>
@@ -86,8 +114,8 @@
     <!-- Match -->
 }
 else
-	{
-<div style="margin:auto;width: 50%;margin-top:100px; margin-bottom:100px;">
-    <h1>Ufukta hiç maç yok !</h1>
-</div>
-	}
+{
+    <div style="margin:auto;width: 50%;margin-top:100px; margin-bottom:100px;">
+        <h1>Ufukta hiç maç yok !</h1>
+    </div>
+}
