--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Head.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Head.cshtml
@@ -4,6 +4,7 @@
 <!-- Document Title -->
 <title>@ViewBag.Title | @ViewBag.CompanyName</title>
 <!-- StyleSheets -->
+<script data-ad-client="ca-pub-2304315388653078" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 <link rel="icon" type="image/png" href="~/favicon.png">
 <link rel="stylesheet" href="~/Assets/css/bootstrap/bootstrap.min.css">
